[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localhostkiller"
version = "0.1.0"
description = "Kill localhost processes with style"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jawad", email = "jawad@makeworking.com"}
]
keywords = ["localhost", "kill", "process", "dev", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://makeworking.com/localhostkiller"
Repository = "https://github.com/codebyjawad/localhostkiller"
Documentation = "https://github.com/codebyjawad/localhostkiller#readme"

[project.scripts]
lhk = "lhk:main"
